[gd_scene load_steps=7 format=2]

[ext_resource path="res://characters/hedgehog/hedgehog.gd" type="Script" id=1]
[ext_resource path="res://characters/hedgehog/hedgehog.svg" type="Texture" id=2]
[ext_resource path="res://accessoires/xmas_hat.svg" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 55.8834

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 62.6287

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 1188.74, 260.953 )

[node name="hedgehog" type="RigidBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )

[node name="base" type="Node2D" parent="."]

[node name="hedgehog" type="Sprite" parent="base"]

position = Vector2( -5.15997, -11.9575 )
texture = ExtResource( 2 )

[node name="xmas_hat" type="Sprite" parent="base"]

position = Vector2( -49.8687, -9.47754 )
texture = ExtResource( 3 )

[node name="collision" type="CollisionShape2D" parent="."]

position = Vector2( -0.425293, -7.77185 )
shape = SubResource( 1 )

[node name="damage_area" type="Area2D" parent="."]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_area"]

position = Vector2( 4.36929, -17.0802 )
shape = SubResource( 2 )

[node name="trigger_area" type="Area2D" parent="."]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="trigger_area"]

position = Vector2( 2.85059, -203.286 )
shape = SubResource( 3 )

[connection signal="body_entered" from="damage_area" to="." method="_on_damage_area_body_entered"]

[connection signal="body_entered" from="trigger_area" to="." method="_on_trigger_area_body_entered"]

[connection signal="body_exited" from="trigger_area" to="." method="_on_trigger_area_body_exited"]


